build: add exec-maven-plugin as ./gradlew run equivalent