@@ -627,6 +627,34 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <mainClass>com.intellij.formatter.JetbrainsFormatterApplication</mainClass>
+          <jvmArgs>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.io=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.util=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.util.concurrent=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.desktop/sun.awt=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.desktop/java.awt=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.desktop/javax.swing=ALL-UNNAMED</jvmArg>
+            <jvmArg>-Djava.awt.headless=true</jvmArg>
+          </jvmArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
